# Node

./: .gitignore  CMakeLists.txt  main.c
bsp/: CMakeLists.txt
bsp/raspi5/: CMakeLists.txt  DEV_Config.h
core/: CMakeLists.txt  core.c  core.h  internal.h
core/node/: CMakeLists.txt  node_common.h
core/node/demo/: CMakeLists.txt  demo.c  template.c  template.h
core/node/picture/: CMakeLists.txt  picture.c
core/node/template/: CMakeLists.txt  template.c
driver/: CMakeLists.txt
driver/eink7_3e/: CMakeLists.txt  EPD_7in3e.c
lib/: CMakeLists.txt
lib/EinkGUI/: CMakeLists.txt
lib/Fonts/: CMakeLists.txt
